# katamino

./: .gitignore  LICENSE  README.md  pyproject.toml  result.txt
output/: level_10_full.txt  level_3_full.txt  level_4_full.txt  level_5_full.txt  level_6_full.txt  level_7_full.txt  level_8_full.txt  level_9_full.txt
src/: field.py  main.py  solver.py  visual.py
src/shapes/: __init__.py  shape.py  shape_c.py  shape_f.py  shape_i.py  shape_l.py  shape_o.py  shape_q.py  shape_s.py  shape_t.py  shape_v.py  shape_w.py  shape_y.py  shape_z.py
tests/: test_shape.py
